Prevent text overflow on mobile

--- a/lab_receipt.html
+++ b/lab_receipt.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta charset="utf-8" name="viewport" 
+        content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.4"/>
     <title>ECSE211 Lab Receipt Generator</title>
 
     <style>
-      body { font-family: Arial, Verdana, 'sans-serif'; }
+      body { font-family: Arial, Verdana, 'sans-serif'; white-space: nowrap; }
 
       .rb:checked ~ label {
         color: white;
