Add favicon and theme

--- a/lab_receipt-beta.html
+++ b/lab_receipt-beta.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" name="viewport" 
         content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.4"/>
+    <meta name="theme-color" content="#FF7F50" />
+    <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" type="image/png" href="img/ECSE211_org_192.png"/>
     <title>ECSE211 Lab Receipt Generator</title>
 
     <style>
